*Lardawge-Rfm 1.4.1 (unreleased)*

* XML Parsing is now done via xpath which significantly speeds up parsing.

* Changes to accessor method names for Resultset#portals Resultset#fields to Resultset#portal_meta and Resultset#field_meta to better describe what you get back.

* Added an option to load portal records which defaults to false. This significantly speeds up load time when portals are present on the layout.

    Example:
    
      result = fm_server('layout').find({:username => "==#{username}"}, {:include_portals => true})
      This will fetch all records with portal records attached.
      
      result.first.portals would return an empty hash by default.
      
* Internal file restructuring. Some classes have changed but it should be nothing a developer would use API wise. Please let me know if it is.

* Removed Layout#value_lists && Layout#field_controls. Will put back in if the demand is high. Needs a major refactor and different placement if it goes back in. Was broken so it didn't seem to be used by many devs.