@@ -211,7 +211,7 @@ module Rfm
     
     def get_records(action, extra_params = {}, options = {})
       include_portals = options[:include_portals] ? options.delete(:include_portals) : nil
-      xml_response = @db.server.do_action(@db.account_name, @db.password, action, params.merge(extra_params), options).body
+      xml_response = @db.server.connect(@db.account_name, @db.password, action, params.merge(extra_params), options).body
       Rfm::Resultset.new(@db.server, xml_response, self, include_portals)
     end
     
